# stationkit

./: README.md  main.py  pyproject.toml
apps/: __init__.py
apps/sequence_app/: README.md  __init__.py
apps/sequence_app/server/: __init__.py  app.py
apps/sequence_app/server/static/: index.html
apps/sequence_app/server/static/assets/: index-B9s40oqH.js  index-BKkOf-WL.css  index-C1ZGfPzE.js  index-CqYtLQbQ.js  index-DHpNw7i6.js  index-DPgQWXXZ.js  index-DbAoe35r.css  index-DbSWm2-I.css
apps/sequence_app/web/: package-lock.json  package.json  vite.config.ts
apps/sequence_app/web/src/: App.tsx  i18n.ts  index.css
apps/sequence_app/web/src/api/: client.ts  types.ts
apps/sequence_app/web/src/components/: DevicePanel.tsx  RunStatusPanel.tsx  RunToolbar.tsx  SequenceTable.tsx  StatusBadge.tsx
apps/sequence_app/web/src/store/: sequenceStore.ts
documents/: gas_collection_time_driven.md  station_controller_design.md  stationkit_やってみた入門.md
stationkit/: __init__.py  _logging.py  execution.py  sequence.py
stationkit/adapters/: __init__.py  _form_inputs.py  _shared.py  cli.py  gui.py  http.py  local_cli.py  sequence_http.py
stationkit/core/: __init__.py  action.py  base.py  exceptions.py  execution_context.py  introspection.py  metadata.py  state.py
stationkit/testing/: __init__.py  mock.py
tests/: test_sequence_app_server.py  test_sequence_http.py  test_stationkit.py
