[project]
name = "stationkit"
version = "0.1.0"
description = "Station controller framework prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[project.scripts]
stationkit = "main:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
