[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stationkit"
version = "0.1.0"
description = "Station controller framework prototype"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "gradio>=6.12.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "typer>=0.24.1",
    "uvicorn>=0.44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["stationkit*", "apps", "apps.sequence_app", "apps.sequence_app.server*"]

[tool.setuptools.package-data]
"apps.sequence_app.server" = ["static/**/*"]
# `import apps.sequence_app.server` に、データファイルを紐づけるらしい
# これにより、パッケージインストール後もディレクトリに含めておくみたいな感じらしい

[tool.pytest.ini_options]
pythonpath = ["."]
